# cpp-game-backend

./: requirements.txt
.github/workflows/: main.modified.yml  main.original.yml  main.yml
sprint1/problems/final_task/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/: Dockerfile
sprint1/samples/tcp-udp/: conanfile.txt  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/problems/command_line/precode/: CMakeLists.txt
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/game_state/precode/: CMakeLists.txt
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/logger/precode/: CMakeLists.txt
sprint2/problems/logger/solution/: CMakeLists.txt  my_logger.h
sprint2/problems/server_logging/precode/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/ammo/solution/: ammo.txt  load.yaml
sprint3/problems/find_return/precode/: CMakeLists.txt
sprint3/problems/flamegraph/precode/: shoot.py
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt
sprint3/problems/gather/precode/: Dockerfile
sprint3/problems/gen_objects/precode/: CMakeLists.txt
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/instrumentation/solution/: gmon.out
sprint3/problems/scores/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/static_lib/precode/: CMakeLists.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/stress/solution/: load.yaml
sprint3/problems/urlencode/solution/: build_windows.sh
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/db_of_books/precode/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/src/: json_parser.h  main.cpp
sprint4/problems/leave_game/precode/: CMakeLists.txt  Dockerfile
sprint4/problems/leave_game/precode/src/: connection_pool.h  main.cpp  model.cpp  postgres.h
sprint4/problems/leave_game/solution/: Dockerfile
sprint4/problems/state_serialization/precode/: CMakeLists.txt  Dockerfile  conanfile.txt
webserver/: build_linux.sh  conanfile.txt
webserver/src/: api_handler.cpp  api_handler.h  collision_detector.cpp  connection_pool.cpp  geom.h  json_loader.h  main.cpp  request_handler.cpp  request_handler.h  ticker.h
webserver/tests/: model_tests.cpp
(+204 files in other folders)
